Update project to use ssl bundles and jlink